# vic3-parser-rust

./: Cargo.toml  LICENSE  README.md  flake.nix  justfile
examples/: program1.txt
nix/: devshell.nix  rust.nix
src/: main.rs  parse_array.rs  parse_next_value.rs  parse_program.rs  parse_scope.rs  parse_simple_value.rs  parse_variables.rs  token.rs  value.rs
