[package]
authors = ["Joaqim Planstedt <mail@joaqim.xyz>"]
edition = "2021"
name = "vic3-parser"
description = "A simple Victoria 3 definitions parser"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.5.1"
clap = { version = "4.5.39", features = ["derive"] }
logos = "0.15.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
